# soundviz

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  python-package.yml
sonicviz/: __init__.py  cli.py
sonicviz/processing/: __init__.py  batch.py
sonicviz/visualization/: __init__.py  base.py  image_animator.py  visualizer.py  waveform_visualizer.py
tests/: __init__.py  conftest.py  test_base.py  test_cli.py  test_image_animator.py  test_integration.py  test_waveform_visualizer.py
